# my_personal_llm

./: .gitignore  Modelfile-uncensored  README.md  requirements.txt
llm_wrapper/: pyproject.toml  test_api.py  test_inference.py  test_integration.py  test_models.py  test_parameters.py  test_setup.py
llm_wrapper/api/: local_llm.py
llm_wrapper/config/: models.yaml  parameters.yaml
llm_wrapper/core/: inference_engine.py  model_manager.py  parameter_manager.py  universal_memory_manager.py
llm_wrapper/examples/: basic_usage.py  integration_demo.py
llm_wrapper/memory_utils/: fortress_protection.py  memory_guardian.py  pre_flight_checker.py  system_circuit_breaker.py  system_limits.py
llm_wrapper/utils/: benchmarking.py  prompt_templates.py
